--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --clr1-700: hsl(var(--clr1-700-hsl));
 
     --clr2-300-hsl: 9 100% 60%;
-    --clr2-500-hsl: 9 100% 50%;
+    --clr2-500-hsl: 276, 18%, 17%;
     --clr2-700-hsl: 9 100% 35%;
     --clr2-300: hsl(var(--clr2-300-hsl));
     --clr2-500: hsl(var(--clr2-500-hsl));
@@ -42,10 +42,13 @@ html {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-repeat: no-repeat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .dark {
-    background-color: var(--clr-neutral-500);
+    /* background-color: var(--clr-neutral-500); */
     color: rgb(210, 210, 210);
 }
 
@@ -53,20 +56,48 @@ html {
     display: none;
 }
 
+header,
+footer {
+    /* background-color: rgb(47, 32, 57); */
+    color: white;
+    padding: 20px;
+    padding-inline: 20vw;
+}
+
+header {
+    background: linear-gradient(68deg, black, hsl(276, 28%, 17%));
+}
+
+footer {
+    background:linear-gradient(308deg, rgb(47, 32, 57), black);
+}
+
 
 
 main {
     flex-grow: 1;
     margin: 0;
+    padding: 50px 20vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3em;
+    background: linear-gradient(90deg, black, hsl(276, 28%, 17%));
+
+    /* gap: 1em; */
 
     [class*="container"] {
-        /* margin: 10px; */
+        margin: 10px;
 
+        &:nth-child(2) {
+            margin-bottom: 50px;
+        }
+
+
+    }
+
+    p {
+        margin-block: 5px;
     }
 
 }
@@ -79,10 +110,10 @@ main {
     justify-content: space-between;
     align-items: center;
 
-    
+
     .speed-data {
         width: max-content;
     }
-    
+
 
 }
